# pose-graph-optimization-implementation

./: .gitignore  CMakeLists.txt  README.md
include/: math.hpp  pose_graph_optimizer.hpp  read_g2o.hpp  types.hpp
src/: main.cpp  math.cpp  pose_graph_optimizer.cpp  read_g2o.cpp  types.cpp
